--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
     "build-watch": "tsc-watch",
     "start-watch": "nodemon dist/app.js",
     "start": "node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "createTextFile": "node createTextFiles/createFile.js > src/textFiles/file.txt"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
+    "@types/supertest": "^2.0.7",
     "express": "^4.16.4",
+    "jest": "^24.7.1",
     "lodash": "^4.17.11",
     "nodemon": "^1.18.11",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.0.2",
     "tsc-watch": "^2.1.2",
     "tslint": "^5.15.0",
     "typescript": "^3.4.3"
